// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUIEditableTableCell /> composes the className correctly 1`] = `
<th
  className="xui-editabletableheadingcell test-classname xui-editabletableheadingcell-leftaligned"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  scope="col"
/>
`;

exports[`<XUIEditableTableCell /> render with customized scope 1`] = `
<th
  className="xui-editabletableheadingcell xui-editabletableheadingcell-leftaligned"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  scope="rowGroup"
/>
`;

exports[`<XUIEditableTableCell /> renders correctly 1`] = `
<th
  className="xui-editabletableheadingcell xui-editabletableheadingcell-leftaligned"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  scope="col"
>
  XUIEditableTableHeadingCell
</th>
`;
